syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message RegisterUserRequest {
  string phone = 1;
  string password = 2;
}

message RegisterUserResponse {
  string userId = 1;
}

message GuidKey {
  string Id = 1;
}

message Notification {
  string id = 1;
  string userId = 2;
  google.protobuf.Timestamp createdUtc = 3;
  string text = 4;
  string title = 5;
  bool viewed = 6;
}

message GetNotificationsRequest {
  string userId = 1;
  bool viewed = 2;
}

message GetNotificationsResponse {
  repeated Notification notifications = 1;
}

message MarkAsReadRequest {
  string userId = 1;
  repeated string ids = 2;
}

service ProfileGrpc {
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
  rpc DeleteMyself(GuidKey) returns (google.protobuf.Empty);
  rpc GetNotifications(GetNotificationsRequest) returns (GetNotificationsResponse);
  rpc MarkAsRead(MarkAsReadRequest) returns (google.protobuf.Empty);
}